"create: conexão com banco de dados"

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "author": "Luis Rodrigues <luishumberto2000@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "migrations": "knex migrate:latest --knexfile knexfile.ts migrate:latest"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.1",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
