--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "migrations": "knex migrate:latest --knexfile knexfile.ts migrate:latest"
+    "migrations": "knex --knexfile knexfile.ts migrate:latest",
+    "seeds": "knex --knexfile knexfile.ts seed:run"
   },
   "dependencies": {
     "express": "^4.17.1",
